taking out dark mode until buttons can be fixed

--- a/theme-dark.scss
+++ b/theme-dark.scss
@@ -10,3 +10,6 @@ $navbar-bg: #212121;
 
 // Code blocks
 $code-block-bg-alpha: -.8;
+
+// Button customs
+$btn-link-hover-color: green;
