--- a/theme-light.scss
+++ b/theme-light.scss
@@ -2,9 +2,16 @@
 
 // Fonts
 @import url("https://fonts.googleapis.com/css2?family=Montserrat");
+@import url("./node_modules/bootstrap/scss/bootstrap");
 
 // Base document colors
 $body-color: black;
 
 // Code blocks
 $code-block-bg-alpha: -.8;
+
+/* ------- customize primary button color -------- */   
+.btn {
+  $btn-link-color:green;
+  $btn-link-hover-color:white;
+}
